Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,13 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "zp=pd.read_excel('Data/Zipcode_Demos.xlsx',skiprows=48)\n",
+    "zb=pd.read_excel('Data/Zipcode_Demos.xlsx')\n"
    ]
   },
   {
